finished all answers and thank you page email

--- a/templates/thankyou.html
+++ b/templates/thankyou.html
@@ -1,1 +1,3 @@
-<p>thank you submitting</p>
+<h1>Thank you submitting</h1>
+<p>If you want to further discuss the research contact me on my email: bai00008@students.stir.ac.uk </p>
+<p>or my supervisor email: alexander.brownlee@stir.ac.uk  </p>
